--- a/index.html
+++ b/index.html
@@ -3,16 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Phòng Khám Hải</title>
     <!-- embed code -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
+     <!-- favicon -->
+     <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png">
+     <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png">
+     <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/apple-icon-72x72.png">
+     <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-icon-76x76.png">
+     <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicon/apple-icon-114x114.png">
+     <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicon/apple-icon-120x120.png">
+     <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicon/apple-icon-144x144.png">
+     <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicon/apple-icon-152x152.png">
+     <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-icon-180x180.png">
+     <link rel="icon" type="image/png" sizes="192x192"  href="./assets/favicon/android-icon-192x192.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon/favicon-96x96.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+     <link rel="manifest" href="./assets/favicon/manifest.json">
+     <meta name="msapplication-TileColor" content="#ffffff">
+     <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png">
+     <meta name="theme-color" content="#ffffff">
     <!-- style  -->
      <link rel="stylesheet" href="./assets/css/reset.css">
      <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
-    <h1>uhuhuhu</h1>
+<body style="height: 10000px;">
+    <header class="header">
+        <div class="container">
+            <div class="navbar">
+                <div class="head">
+                    <img src="./assets/img/logo-head.svg" alt="" class="logo">
+                    <div class="text">
+                        <span class="text--lagre">Shine</span>
+                        <span class="text--small">Smile</span>
+                    </div>
+                </div>
+                <ul>
+                    <li><a class="home">Home</a></li>
+                    <li><a>Services</a></li>
+                    <li><a>About</a></li>
+                    <li><a>Doctor</a></li>
+                </ul>
+                <div class="action">
+                    <a href="#!" class="action__link">Log in</a>
+                    <a href="#!" class="btn">Sign up</a>
+                </div>
+            </div>
+            <div class="hero">
+                <div class="hero__title">
+                    <h2 class="hero__title__sub-title">Exceptional dental care for all ages.</h2>
+                    <p class="hero__title__des">Exceptional dental care for all ages. Your great smile begins with a great dentist.</p>
+                    <a href="" class="btn">Book Online</a>
+                    <span>or call (123) 456-7890</span>
+                </div>
+                <div class="hero__img">
+                    <img  class="hero__img hero__img--large" src="./assets/img/hero__img1.svg" alt="">
+                    <img class="hero__img hero__img--small" src="./assets/img/hero__img2.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </header>
+
 </body>
 </html>
