--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="head">
                     <img src="./assets/img/logo-head.svg" alt="" class="logo">
                     <div class="text">
-                        <span class="text--lagre">Shine</span>
+                        <span class="text--large">Shine</span>
                         <span class="text--small">Smile</span>
                     </div>
                 </div>
