--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         <!-- services -->
         <section class="services">
             <div class="container">
-                <h2 class="section-heading">Our services</h2>
-                <p class="section-des">Exceptional dental care for all ages. Your great smile begins with a great dentist.</p>
+                <h2 class="section-heading service__heading">Our services</h2>
+                <p class="section-des service__des">Exceptional dental care for all ages. Your great smile begins with a great dentist.</p>
                 <div class="section-row">
                     <figure class="services__image">
                         <img src="./assets/img/services__img.svg" alt="" class="services__img">
@@ -199,18 +199,65 @@
             <div class="container">
               <div class="warranty__row">
                 <div class="warranty__img-group">
-                  <img class="warranty__img1" src="./assets/img/warranty2.svg" alt="Image 1">
-                  <img class="warranty__img2" src="./assets/img/warranty1.svg" alt="Image 2">
+                    <figure>
+                        <img class="warranty__img1" src="./assets/img/warranty2.svg" >
+                        <img class="warranty__img2" src="./assets/img/warranty1.svg" >
+                    </figure>
                 </div>
                 <div class="warranty__title">
                   <h2 class="warranty__sub-title section-heading">Take back your smile with shine.</h2>
                   <p class="warranty__des section-des">If you’re missing multiple teeth due to decay, injury, or the natural aging process, dentures might be the perfect solution.</p>
-                  <a class="warranty__btn" href="#!">Learn more</a>
+                  <a class="warranty__btn btn" href="#!">Learn more</a>
                 </div>
               </div>
             </div>
-          </section>
-          
+        </section>
+        <!-- dentist -->
+        <section class="dentist">
+            <div class="container">
+                <header>
+                    <h1 class="dentist_heading">Our virtual dentist</h1>
+                    <a href="#!" class="dentist_btn btn">Meet our dentist</a>
+                </header>
+                <div class="dentist_row">
+                    <div class="dentist-item" >
+                        <div class="boc">
+                            <img src="./assets/img/portrait-smiling-handsome-male-doctor-man_ccexpress.png" alt="" class="alo">
+                        </div>
+                        <h3 class="dentist_name">Dr. Essence Page</h3>
+                        <p class="dentist_des">DDS, California - Linda University</p>
+                    </div >
+                    <div class="dentist-item" >
+                        <div class="boc">
+                            <img src="./assets/img/dentist2.svg" alt="" class="alo">
+                        </div>
+                        <h3 class="dentist_name">Dr. Essence Page</h3>
+                        <p class="dentist_des">DDS, California - Linda University</p>
+                    </div >
+                    <div  class="dentist-item">
+                        <div class="boc">
+                            <img src="./assets/img/dentist3.svg" alt="" class="alo">
+                        </div>
+                        <h3 class="dentist_name">Dr. Essence Page</h3>
+                        <p class="dentist_des">DDS, California - Linda University</p>
+                    </div >
+                    <div  class="dentist-item">
+                        <div class="boc">
+                            <img src="./assets/img/dentist4.svg" alt="" class="alo">
+                        </div>
+                        <h3 class="dentist_name">Dr. Essence Page</h3>
+                        <p class="dentist_des">DDS, California - Linda University</p>
+                    </div >
+                    
+                    </div>
+                </div>
+                <div class="button">
+                    <div class="row">
+                        <button  class="button-action left"><img src="./assets/img/Vector 1.svg" alt="" ></button>
+                        <button class="button-action right"><img src="./assets/img/Vector 2.svg" alt=""></button>
+                    </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
